--- a/todo-list-js-master/todo-list-js-master/index.html
+++ b/todo-list-js-master/todo-list-js-master/index.html
@@ -30,7 +30,7 @@
         <form id="itemForm" >
             <h3 class=""> TO DO LIST</h3>
             <div class="input-group mb-3">
-                <input type="text" class="form-control"  id="itemInput" value="" placeholder="Please enter name...">
+                <input type="text" class="form-control"  id="itemInput" value="" placeholder="Please enter the task name...">
                 <button class="btn btn-outline-primary">ADD ITEM</button>
             </div>
         </form>
